fixed tabbed box height and adjusted paragraph spacing at top.

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -147,7 +147,7 @@ ul.nav-tabs li a{
 }
 
 .tab-content {
-  height: 300px;
+  height: 313px;
   padding: 10px 20px 10px 20px;
   border-left: 1px solid #ccc ;
   border-right: 1px solid #ccc;
